# cloud-edge-audit-demo

./: .gitignore  DEMO_SCRIPT.docx  DEMO_SCRIPT.md  DEPLOY_SOP.md  README.md  SOP.md  flow_env.py  openclaw_a2a_client.py  prompts.py  pyproject.toml  schemas.py
demo/: crewpi_adapter.py  events.py  flows.py  pinchbench_loader.py  pinchbench_rubric.py  pinchbench_scoring.py  run_registry.py  scoring.py  server.py  task_loader.py  tasks.yaml
demo/static/: app.js  index.html  style.css
ollama/: Modelfile-qwen3.5-0.8b-32k-demo  Modelfile-qwen3.5-0.8b-64k-demo
scripts/: build_demo_script_docx.py  check-demo-env.sh  start-demo-cloud.sh  start-demo-local.sh
