[project]
name = "cloud-edge-audit-demo"
version = "0.1.0"
description = "Live demo: local direct vs cloud-edge plan/audit with PinchBench scoring"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.32",
  "pyyaml>=6.0",
  "crewai>=0.86",
  "crewai[litellm]>=0.86",
  "click>=8.0",
  "rich>=13.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[tool.uv]
dev-dependencies = []
